<resources>
    <string name="app_name">News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bbc">BBC</string>
    <string name="republic_bharat">REPUBLIC BHARAT</string>
    <string name="ani">ANI</string>
    <string name="zee_news">ZEE NEWS</string>
    <string name="TV9" />
    <string name="bnc_news">BNC NEWS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>